tests/neg-custom-args/safe-init/simple3.scala
class Foo {
  val list = List(4, 6)
  val n    = len + 5       // error
  val len  = list.size
}
